reflect-demo/src/tests/snapshots/reflect_demo__tests__serde__struct_with_rename_to_kebab_case.snap
---
source: reflect-demo/src/tests/serde.rs
expression: "super::into_schema::<TestStructWithRenameToKebabCase>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::serde::struct_name"
      },
      "output_type": {
        "name": "reflect_demo::tests::serde::struct_name"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::struct_name",
        "fields": [
          {
            "name": "field_name",
            "serde_name": "field-name",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::serde::struct_name",
        "fields": [
          {
            "name": "field_name",
            "serde_name": "field-name",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
